converting to angular

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8">
     <title>Koda Dashbord</title>
   </head>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/signup.css">
+  <link rel="stylesheet" href="css/junglePages.css">
+  <link rel="stylesheet" href="css/lionIntro.css">
   <body>
     <div ng-app="myApp">
       <div ui-view></div>
     </div>
+    <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="bower_components/angular/angular.min.js" charset="utf-8"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js" charset="utf-8"></script>
   </body>
+  <script src="app.js" charset="utf-8"></script>
+  <script src="controllers/loginCtrl.js" charset="utf-8"></script>
+  <script src="controllers/junglepageCtrl.js" charset="utf-8"></script>
+  <script src="controllers/junglepageCtrl1.js" charset="utf-8"></script>
+  <script src="controllers/lionIntroCtrl.js" charset="utf-8"></script>
+  <script src="controllers/lionIntroCtrl1.js" charset="utf-8"></script>
+  <script src="controllers/signupCtrl.js" charset="utf-8"></script>
+  <script src="controllers/dashboardCtrl.js" charset="utf-8"></script>
 </html>
