highlight effect added on button and some new changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>Koda Dashbord</title>
   </head>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="css/login.css">
-  <link rel="stylesheet" href="css/signup.css">
-  <link rel="stylesheet" href="css/junglePages.css">
-  <link rel="stylesheet" href="css/lionIntro.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="css/signup.css" />
+  <link rel="stylesheet" href="css/junglePages.css" />
+  <link rel="stylesheet" href="css/lionIntro.css" />
+  <link rel="stylesheet" href="css/kodabar.css" />
   <body>
     <div ng-app="myApp">
       <div ui-view></div>
@@ -20,6 +22,7 @@
   </body>
   <script src="app.js" charset="utf-8"></script>
   <script src="controllers/loginCtrl.js" charset="utf-8"></script>
+  <script src="directives/kodabar.js" charset="utf-8"></script>
   <script src="controllers/junglepageCtrl.js" charset="utf-8"></script>
   <script src="controllers/junglepageCtrl1.js" charset="utf-8"></script>
   <script src="controllers/lionIntroCtrl.js" charset="utf-8"></script>
