--- a/dummy1.html
+++ b/dummy1.html
@@ -1,212 +1,92 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
-    <title>3rd layout</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="public/css/lionDance2.css">
+    <title></title>
+
+    <link rel="stylesheet" href="app/public/css/kodabar.css" />
+    <link rel="stylesheet" href="app/public/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="app/public/bower_components/font-awesome/css/font-awesome.min.css" />
+    <script src="app/public/bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="app/public/bower_components/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="app/public/bower_components/angular/angular.min.js" charset="utf-8"></script>
+    <script src="app/public/bower_components/angular-ui-router/release/angular-ui-router.min.js" charset="utf-8"></script>
     <style media="screen">
-      #rightpoint{
-        width:320px;;
-        height:auto;
-        /*background-color: grey;*/
-        float:left;
-        margin-top: 5%;
+      .popup1{
+        width:1200px;
+        height:500px;
+        border-radius: 10px;
+        background-color: white;
+        /*border: 1px solid black;*/
+        margin-left: 33%;
+        margin-top: 10%;
       }
-      .gifSample{
-        /*display: inline-block;*/
-        width:100%;
-        height:auto;
-        /*background-color: green;*/
+      p{
+        color:violet;
+        text-align: center;
+        font-size: 20px;
+      }
+      .content{
+        margin-top: 2%;
+        margin-left: 10%;
+        width:880px;
+        height:435px;
+        border: 1px solid black;
+        border-radius:10px;
+        padding: 20px;
+      }
+      #cross{
+        margin-left: -38px;
+      }
+      #pop-lion{
+        height:300px;
+        width:250px;
+        margin-top: 20%;
+      }
+      #walk{
+        margin: 4% 15%;
+        width: 554px;
+        height:150px;
+      }
+      .inner-chat{
+        margin-top: 4%;
       }
     </style>
-    <script type="text/javascript">
-        $(document).ready(function () {
-          setTimeout(function () {
-            $("#pointing").fadeIn(500);
-          },4000);
-          setTimeout(function () {
-            $("#leftPoint").fadeIn(500);
-          },8000);
-        });
-
-        function allowDrop(ev) {
-            ev.preventDefault();
-        }
-
-        function drag(ev) {
-            ev.dataTransfer.setData("text", ev.target.id);
-        }
-
-        function drop(ev) {
-            ev.preventDefault();
-            var data = ev.dataTransfer.getData("text");
-            ev.target.appendChild(document.getElementById(data));
-        }
-    </script>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="left-content">
-                    <div class="top-left-content">
-
-                    </div>
-                    <div class="bottom-left-content">
-                        <div class="dragSection">
-                            <div class="col-lg-6">
-                                <div class="imgback">
-                                    <img src="public/images/dance1.png" id="dance1" alt="Dance Step 1 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                                <div class="imgback">
-                                    <img src="public/images/dance2.png" id="dance2" alt="Dance Step 2 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="imgback">
-                                    <img src="public/images/dance3.png" id="dance3" alt="Dance Step 3 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                                <div class="imgback">
-                                    <img src="public/images/dance4.png" id="dance4" alt="Dance Step 4 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="imgback">
-                                    <img src="public/images/dance5.png" id="dance5" alt="Dance Step 5 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                                <div class="imgback">
-                                    <img src="public/images/dance6.png" id="dance6" alt="Dance Step 6 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="imgback">
-                                    <img src="public/images/dance7.png" id="dance7" alt="Dance Step 7 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                                <div class="imgback">
-                                    <img src="public/images/dance8.png" id="dance8" alt="Dance Step 8 image" draggable="true" ondragstart="drag(event)" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="top-mid-content">
-
-                </div>
-                <div class="bottom-mid-content">
-
-                    <div class="gifSample">
-                        <div id="rightpoint">
-                          <img src="public/images/midsign.png" style="display:none" id="pointing" alt="Rightside Pointing image" />
-                        </div>
-                        <img src="public/images/sampleDance.gif" id="sample" alt="Dance Preview" />
-                    </div>
-                    <div class="dropSection">
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="headers">
-                                    Step1
-                                </div>
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="headers">
-                                    Step2
-                                </div>
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="headers">
-                                    Step3
-                                </div>
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="headers">
-                                    Step4
-                                </div>
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                                <div class="headers">
-                                    Step5
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                                <div class="headers">
-                                    Step6
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                                <div class="headers">
-                                    Step7
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="subcards">
-                                <div class="drop" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-                                </div>
-                                <div class="headers">
-                                    Step8
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="navbar">
-                    <a href="#"><img src="public/images/play.png" id="actionButton" alt="play button" /></a>
-                    <img src="public/images/bottommid.png" id="leftPoint" style="display:none" alt="Leftside Pointing image" />
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="right-content">
-                    <div class="top-right-content">
-
-                    </div>
-                    <div class="bottom-right-content">
-                        <img src="public/images/lionDanceChat2.png" id="chat" alt="Lion Dance Chat image" />
-                        <img src="public/images/lionMascot.png" id="lion" alt="Lion Image" />
-                    </div>
-                </div>
-            </div>
+    <div class="popup1">
+      <div class="row">
+        <div class="content col-lg-11">
+          <div class="col-lg-8 inner-chat">
+            <p>To learn the dance sequence,
+              it was very important to identify the steps first.
+            </p>
+            <p>
+              But even though I did identify the steps,I did not
+              have the order inplace.
+            </p>
+            <p>
+              You saw exactly what happened when I had the
+             wrong order of steps.I looked like I was have a fit.
+            </p>
+            <p>
+              It's very important to remember what you have learnt
+              here.No not dance,but identifying the steps and
+              their sequence.
+            </p>
+            <p>
+              You will find you need it often in life.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <img src="app/public/images/lionMascot.png" id="pop-lion" alt="lion image">
+          </div>
         </div>
+        <div class="cross col-lg-1">
+          <img src="app/public/images/cross.png" id="cross"alt="cross image" />
+        </div>
+      </div>
     </div>
 </body>
 
